# vitax

./: LICENSE  README.md  pyproject.toml
examples/: vitax-training-fsdp.ipynb
vitax/: __init__.py  training.py
vitax/models/: __init__.py  modeling.py  vit.py  vit_load_weights.py
