[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "vitax"
version = "0.0.10"
authors = [
  { name="Mohammad Hassan Heydari", email="mheyddarii@gmail.com" },
]
description = "Vitax: Vision Transformers in Flax"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "jax==0.7.1",
    "flax==0.12.0",
    "optax==0.2.6",
    "transformers==4.56.2"
]


[project.urls]
"Homepage" = "https://github.com/heydaari/vitax"
"Bug Tracker" = "https://github.com/heydaari/vitax/issues"